# threadpool

./: Cargo.toml
examples/: benchmark.rs  matrix.rs  waitable.rs  workgroup.rs
examples/matrix/: classic.rs  grouped.rs  main.rs
src/: lib.rs  resource_id.rs  worker.rs
src/atomic/: mod.rs  spinlock.rs  waitable.rs  windows.rs  wrapper.rs
src/atomic/lock/: mod.rs  rwlock.rs  spinlock.rs
src/atomic/platform/: macos.rs  mod.rs  windows.rs
src/group/: job.rs  mod.rs  state.rs
src/utils/: autoprofile.rs  mod.rs
src/workgroup/: job.rs  job_queue.rs  mod.rs  worker.rs
