[package]
name = "threadpool"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[target.'cfg(any(target_os = "linux", target_os = "android", target_os = "freebsd"))'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.42.0", features = [
    "Win32_System_Threading",
    "Win32_Foundation",
    "Win32_System_WindowsProgramming",
] }
